# internal/controller/event_controller/get-organizations-events.go
@@ -7,14 +7,6 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Tags        event
-// @Accept      json
-// @Produce     json
-// @Security    Bearer
-// @Success     200 {object} models.SuccessResponse
-// @Failure     400 {object} models.ErrorResponse
-// @Failure     500 {object} models.ErrorResponse
-// @Router      /events/get-organizations-in-process [get]
 func (av *EventController) GetOrgEvents(c *gin.Context) {
 	orgID := c.GetUint("orgID")
 
