# internal/controller/event_controller/participate-event.go
@@ -11,15 +11,32 @@ import (
 // @Tags        event
 // @Accept      json
 // @Produce     json
+// @Param userID path int true "userID"
 // @Param id path int true "id"
 // @Security    Bearer
 // @Success     200 {object} models.SuccessResponse
 // @Failure     400 {object} models.ErrorResponse
 // @Failure     500 {object} models.ErrorResponse
-// @Router      /events/participate-event/{id} [post]
+// @Router      /events/participate-event/{userID}/{id} [post]
 func (av *EventController) JoinEvent(c *gin.Context) {
 
-	userID := c.GetUint("userID")
+	userIdVal := c.Param("userID")
+	userID, err := strconv.Atoi(userIdVal)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{
+			Result: []models.ErrorDetail{
+				{
+					Code:    "ERROR_GET_IVENT",
+					Message: "incorrect id format",
+					Metadata: models.Properties{
+						Properties1: err.Error(),
+					},
+				},
+			},
+		})
+		return
+	}
+
 	idVal := c.Param("id")
 	id, err := strconv.Atoi(idVal)
 	if err != nil {
@@ -37,7 +54,7 @@ func (av *EventController) JoinEvent(c *gin.Context) {
 		return
 	}
 
-	err = av.EventRepository.ParticipateEvent(c, int(userID), id)
+	err = av.EventRepository.ParticipateEvent(c, userID, id)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, models.ErrorResponse{
 			Result: []models.ErrorDetail{
