# internal/controller/organization_controller/get-all-organization.go
@@ -2,7 +2,6 @@ package organization
 
 import (
 	"net/http"
-	"strconv"
 
 	models "github.com/Orken1119/HelpNet/internal/models"
 	"github.com/gin-gonic/gin"
@@ -11,30 +10,13 @@ import (
 // @Tags organization
 // @Accept json
 // @Produce json
-// @Param id path int true "id"
 // @Security Bearer
 // @Success 200 {object} models.SuccessResponse
 // @Failure default {object} models.ErrorResponse
-// @Router /organizations/profile/{id} [get]
-func (av *OrganizationController) GetOrganizationProfile(c *gin.Context) {
-	idVal := c.Param("id")
-	orgID, err := strconv.Atoi(idVal)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{
-			Result: []models.ErrorDetail{
-				{
-					Code:    "ERROR_GET_ORGANIZATION",
-					Message: "incorrect id format",
-					Metadata: models.Properties{
-						Properties1: err.Error(),
-					},
-				},
-			},
-		})
-		return
-	}
+// @Router /organizations/get-all-organizations-profile [get]
+func (av *OrganizationController) GetAllOrganizationsProfile(c *gin.Context) {
 
-	profile, err := av.OrganizationRepository.GetOrganizationProfile(c, orgID)
+	profile, err := av.OrganizationRepository.GetAllOrganizations(c)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, models.ErrorResponse{
 			Result: []models.ErrorDetail{
