# internal/controller/volunteer_controller/delete-certificate.go
@@ -1,4 +1,4 @@
-package organization
+package volunteer_controller
 
 import (
 	"net/http"
@@ -8,22 +8,22 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Tags organization
+// @Tags user
 // @Accept json
 // @Produce json
 // @Param id path int true "id"
 // @Security Bearer
-// @Success 200 {object} models.SuccessResponse
+// @Success 200 {object} map[string]string
 // @Failure default {object} models.ErrorResponse
-// @Router /organizations/profile/{id} [get]
-func (av *OrganizationController) GetOrganizationProfile(c *gin.Context) {
+// @Router /user/delete-certificate/{id} [delete]
+func (sc *UserController) DeleteCertificate(c *gin.Context) {
 	idVal := c.Param("id")
-	orgID, err := strconv.Atoi(idVal)
+	userID, err := strconv.Atoi(idVal)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, models.ErrorResponse{
 			Result: []models.ErrorDetail{
 				{
-					Code:    "ERROR_GET_ORGANIZATION",
+					Code:    "ERROR_GET_IVENT",
 					Message: "incorrect id format",
 					Metadata: models.Properties{
 						Properties1: err.Error(),
@@ -34,13 +34,13 @@ func (av *OrganizationController) GetOrganizationProfile(c *gin.Context) {
 		return
 	}
 
-	profile, err := av.OrganizationRepository.GetOrganizationProfile(c, orgID)
+	err = sc.UserRepository.DeleteCertificate(c, userID)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, models.ErrorResponse{
 			Result: []models.ErrorDetail{
 				{
-					Code:    "ERROR_GET_ORGANIZATION_PROFILE",
-					Message: "Can't get profile from db",
+					Code:    "ERROR_GET_IVENT",
+					Message: "incorrect id format",
 					Metadata: models.Properties{
 						Properties1: err.Error(),
 					},
@@ -49,5 +49,6 @@ func (av *OrganizationController) GetOrganizationProfile(c *gin.Context) {
 		})
 		return
 	}
-	c.JSON(http.StatusOK, models.SuccessResponse{Result: profile})
+
+	c.JSON(http.StatusOK, gin.H{"message": "certificate was deleted"})
 }
