# internal/controller/volunteer_controller/get-all-volunteers.go
@@ -1,40 +1,22 @@
-package organization
+package volunteer_controller
 
 import (
 	"net/http"
-	"strconv"
 
 	models "github.com/Orken1119/HelpNet/internal/models"
 	"github.com/gin-gonic/gin"
 )
 
-// @Tags organization
+// @Tags user
 // @Accept json
 // @Produce json
-// @Param id path int true "id"
 // @Security Bearer
 // @Success 200 {object} models.SuccessResponse
 // @Failure default {object} models.ErrorResponse
-// @Router /organizations/profile/{id} [get]
-func (av *OrganizationController) GetOrganizationProfile(c *gin.Context) {
-	idVal := c.Param("id")
-	orgID, err := strconv.Atoi(idVal)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{
-			Result: []models.ErrorDetail{
-				{
-					Code:    "ERROR_GET_ORGANIZATION",
-					Message: "incorrect id format",
-					Metadata: models.Properties{
-						Properties1: err.Error(),
-					},
-				},
-			},
-		})
-		return
-	}
+// @Router /user/get-all-volunteers-profile [get]
+func (sc *UserController) GetAllVolunteersProfile(c *gin.Context) {
 
-	profile, err := av.OrganizationRepository.GetOrganizationProfile(c, orgID)
+	profile, err := sc.UserRepository.GetAllVolunteers(c)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, models.ErrorResponse{
 			Result: []models.ErrorDetail{
