# internal/controller/volunteer_controller/get-volunteer-profile.go
@@ -2,6 +2,7 @@ package volunteer_controller
 
 import (
 	"net/http"
+	"strconv"
 
 	models "github.com/Orken1119/HelpNet/internal/models"
 	"github.com/gin-gonic/gin"
@@ -14,14 +15,30 @@ type UserController struct {
 // @Tags user
 // @Accept json
 // @Produce json
+// @Param id path int true "id"
 // @Security Bearer
 // @Success 200 {object} models.SuccessResponse
 // @Failure default {object} models.ErrorResponse
-// @Router /user/profile [get]
+// @Router /user/profile/{id} [get]
 func (sc *UserController) GetProfile(c *gin.Context) {
-	userID := c.GetUint("userID")
+	idVal := c.Param("id")
+	userID, err := strconv.Atoi(idVal)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{
+			Result: []models.ErrorDetail{
+				{
+					Code:    "ERROR_GET_IVENT",
+					Message: "incorrect id format",
+					Metadata: models.Properties{
+						Properties1: err.Error(),
+					},
+				},
+			},
+		})
+		return
+	}
 
-	profile, err := sc.UserRepository.GetVolunteerProfile(c, int(userID))
+	profile, err := sc.UserRepository.GetVolunteerProfile(c, userID)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, models.ErrorResponse{
 			Result: []models.ErrorDetail{
